--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,4 @@
-{erl_opts, [debug_info]}.
-{deps, []}.
+{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
+{deps, [
+    {lager, ".*", {git, "git://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}}
+]}.
