move log level into app.config

--- a/app.config
+++ b/app.config
@@ -1,5 +1,7 @@
-{lager,
-  {handlers, [
-    {lager_console_backend, debug}
+[
+  {lager, [
+    {handlers, [
+      {lager_console_backend, debug}
+    ]}
   ]}
-}.
+].
