--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {erl_opts, [debug_info, {parse_transform, lager_transform}]}.
 {deps, [
-    {lager, ".*", {git, "git://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}}
+    {lager, ".*", {git, "git://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
+    {yamerl, ".*", {git, "git://github.com/yakaz/yamerl.git", {tag, "v0.4.0"}}}
 ]}.
