rebar: enable cover

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,4 @@
     {lager, ".*", {git, "git://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
     {yamerl, ".*", {git, "git://github.com/yakaz/yamerl.git", {tag, "v0.4.0"}}}
 ]}.
+{cover_enabled, true}.
