--- a/rebar.config
+++ b/rebar.config
@@ -3,4 +3,5 @@
     {lager, ".*", {git, "git://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
     {yamerl, ".*", {git, "git://github.com/yakaz/yamerl.git", {tag, "v0.4.0"}}}
 ]}.
-{cover_enabled, true}.
+% disable cover until we've upgraded to R19.3 that fixes zlib >= 1.2.9
+{cover_enabled, false}.
