--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {deps, [
     {lager, ".*", {git, "git://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
     {yamerl, ".*", {git, "git://github.com/yakaz/yamerl.git", {tag, "v0.4.0"}}},
-    {elli, ".*", {git, "git://github.com/knutin/elli.git", {tag, "v1.0.5"}}}
+    {elli, ".*", {git, "git://github.com/knutin/elli.git", {tag, "v1.0.5"}}},
+    {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.14.11"}}}
 ]}.
-% disable cover until we've upgraded to R19.3 that fixes zlib >= 1.2.9
-{cover_enabled, false}.
+{cover_enabled, true}.
