--- a/rebar.config
+++ b/rebar.config
@@ -6,3 +6,9 @@
     {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.14.11"}}}
 ]}.
 {cover_enabled, true}.
+{relx, [{release, {statser, "1.0.0"}, [statser]},
+        {sys_config, "config/sys.config"},
+        {dev_mode, true},
+        {include_erts, false},
+        {overlay, [{copy, "statser.yaml", "statser.yaml"}]},
+        {extended_start_script, true}]}.
