--- a/rebar.config
+++ b/rebar.config
@@ -10,5 +10,6 @@
         {sys_config, "config/sys.config"},
         {dev_mode, true},
         {include_erts, false},
-        {overlay, [{copy, "statser.yaml", "statser.yaml"}]},
+        {overlay, [{copy, "statser.yaml", "statser.yaml"},
+                   {copy, "assets", "assets"}]},
         {extended_start_script, true}]}.
