--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,9 @@
         {sys_config, "config/sys.config"},
         {dev_mode, true},
         {include_erts, false},
-        {overlay, [{copy, "statser.yaml", "statser.yaml"},
-                   {copy, "assets", "assets"}]},
+        {overlay, [{copy, "assets", "assets"}]},
         {extended_start_script, true}]}.
+{profiles, [{production, [{relx, [{dev_mode, false},
+                                  {include_erts, true},
+                                  {include_src, false}]}]}
+           ]}.
