rebar: add linting via elvis

--- a/rebar.config
+++ b/rebar.config
@@ -1,18 +1,25 @@
 {erl_opts, [debug_info, {parse_transform, lager_transform}]}.
+
 {deps, [
-    {lager, ".*", {git, "git://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
-    {yamerl, ".*", {git, "git://github.com/yakaz/yamerl.git", {tag, "v0.4.0"}}},
-    {elli, ".*", {git, "git://github.com/knutin/elli.git", {tag, "v1.0.5"}}},
-    {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.14.11"}}}
+    {lager, ".*", {git, "https://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
+    {yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git", {tag, "v0.4.0"}}},
+    {elli, ".*", {git, "https://github.com/knutin/elli.git", {tag, "v1.0.5"}}},
+    {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git", {tag, "0.14.11"}}}
 ]}.
+
 {cover_enabled, true}.
-{relx, [{release, {statser, "1.0.0"}, [statser]},
-        {sys_config, "config/sys.config"},
-        {dev_mode, true},
-        {include_erts, false},
-        {overlay, [{copy, "assets", "assets"}]},
-        {extended_start_script, true}]}.
-{profiles, [{production, [{relx, [{dev_mode, false},
-                                  {include_erts, true},
-                                  {include_src, false}]}]}
-           ]}.
+
+{relx,
+    [{release, {statser, "1.0.0"}, [statser]},
+    {sys_config, "config/sys.config"},
+    {dev_mode, true},
+    {include_erts, false},
+    {overlay, [{copy, "assets", "assets"}]},
+    {extended_start_script, true}]}.
+
+{profiles, [
+    {production, [{relx, [{dev_mode, false},
+                      {include_erts, true},
+                      {include_src, false}]}]},
+    {lint, [{plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "v0.1.9"}}}]}]}
+]}.
