elvis: ignore generated source files

--- a/rebar.config
+++ b/rebar.config
@@ -27,6 +27,7 @@
 {elvis,
  [#{dirs => ["src"],
     filter => "*.erl",
+    ignore => [carbon, statser_parser],
     rules => [
               {elvis_style, line_length,
                #{ignore => [],
