--- a/rebar.config
+++ b/rebar.config
@@ -19,6 +19,7 @@
 
 {profiles, [
     {production, [{relx, [{dev_mode, false},
+                      {vm_args, "config/vm.args"},
                       {include_erts, true},
                       {include_src, false}]}]},
     {lint, [{plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "v0.1.9"}}}]}]}
