--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,21 @@
-.rebar3
-_*
-.eunit
-*.o
 *.beam
+*.o
 *.plt
-*.swp
 *.swo
-.erlang.cookie
-ebin
-log
-erl_crash.dump
-.rebar
-logs
-_build
-.idea
-rebar3.crashdump
-/tags
+*.swp
 *.wsp
+.erlang.cookie
+.eunit
+.idea
+.rebar
+.rebar3
+/.cluster
+/.nodes.json
+/tags
+_*
+_build
+ebin
+erl_crash.dump
+log
+logs
+rebar3.crashdump
