--- a/elm-client/package.json
+++ b/elm-client/package.json
@@ -10,7 +10,8 @@
     "webpack-dev-server": "^3.1.0"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development",
     "client": "webpack-dev-server --port 3000"
   }
 }
