client: run dev-server in development mode

--- a/elm-client/package.json
+++ b/elm-client/package.json
@@ -12,6 +12,6 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "client": "webpack-dev-server --port 3000"
+    "client": "webpack-dev-server --port 3000 --mode development"
   }
 }
