add separate config for docker image

--- a/rebar.config
+++ b/rebar.config
@@ -18,12 +18,18 @@
     {extended_start_script, true}]}.
 
 {profiles, [
-    {production, [{relx, [{dev_mode, false},
-                      {vm_args, "config/vm.args"},
-                      {include_erts, true},
-                      {include_src, false}]}]},
-    {lint, [{plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "v0.1.9"}}}]}]}
-]}.
+            {production, [{relx, [{dev_mode, false},
+                                  {vm_args, "config/vm.args"},
+                                  {include_erts, true},
+                                  {include_src, false}]}]},
+            {docker, [{relx, [{dev_mode, false},
+                              {vm_args, "config/vm.args"},
+                              {include_erts, true},
+                              {overlay, [{copy, "assets", "assets"},
+                                         {copy, "statser.yaml.docker", "statser.yaml"}]},
+                              {include_src, false}]}]},
+            {lint, [{plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "v0.1.9"}}}]}]}
+           ]}.
 
 {elvis,
  [#{dirs => ["src"],
