--- a/rebar.config
+++ b/rebar.config
@@ -11,21 +11,19 @@
 
 {relx,
     [{release, {statser, "1.0.0"}, [statser]},
+    {vm_args, "config/vm.args"},
     {sys_config, "config/sys.config"},
-    {dev_mode, true},
-    {include_erts, false},
-    {overlay, [{copy, "assets", "assets"}]},
-    {extended_start_script, true}]}.
+    {include_erts, true},
+    {excl_sys_filters, ["^bin/.*"]},
+    {overlay, [{copy, "assets", "assets"},
+               {copy, "bin/statser", "bin/statser"}
+               ]}
+    ]}.
 
 {profiles, [
-            {production, [{relx, [{dev_mode, false},
-                                  {vm_args, "config/vm.args"},
-                                  {include_erts, true},
-                                  {include_src, false}]}]},
-            {docker, [{relx, [{dev_mode, false},
-                              {vm_args, "config/vm.args"},
-                              {include_erts, true},
-                              {overlay, [{copy, "assets", "assets"},
+            {production, [{relx, [{include_src, false}]}]},
+            {docker, [{relx, [{overlay, [{copy, "assets", "assets"},
+                                         {copy, "bin/statser", "bin/statser"},
                                          {copy, "statser.yaml.docker", "statser.yaml"}]},
                               {include_src, false}]}]},
             {lint, [{plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "v0.1.9"}}}]}]}
