--- a/elm-client/package.json
+++ b/elm-client/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "elm-webpack-loader": "git://github.com/elm-community/elm-webpack-loader#7d1c6d939ea5b8b8a8f2aa2eb497e7fba49e6c71",
+    "elm-webpack-loader": "^4.5.0",
     "file-loader": "^1.1.11",
     "uikit": "^3.0.0-beta.40"
   },
