use new lager config

--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,7 @@
 [
   {lager, [
     {handlers, [
-      {lager_console_backend, info}
+      {lager_console_backend, [{level, info}]}
     ]}
   ]}
 ].
