update elli to 2.0.1

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {deps, [
     {lager, ".*", {git, "https://github.com/erlang-lager/lager.git", {tag, "3.6.4"}}},
     {yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git", {tag, "v0.4.0"}}},
-    {elli, ".*", {git, "https://github.com/knutin/elli.git", {tag, "v1.0.5"}}},
+    {elli, ".*", {git, "https://github.com/elli-lib/elli.git", {tag, "2.0.1"}}},
     {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git", {tag, "0.14.11"}}}
 ]}.
 
@@ -77,3 +77,5 @@
    }
  ]
 }.
+
+% vim: ft=erlang:
