--- a/elm-client/package.json
+++ b/elm-client/package.json
@@ -5,13 +5,13 @@
     "uikit": "^3.0.0-beta.40"
   },
   "devDependencies": {
-    "webpack": "^4.1.0",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.0"
+    "webpack": "^4.5.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "client": "webpack-dev-server --port 3000 --mode development"
+    "client": "webpack serve --port 3030 --mode development"
   }
 }
